@@ -3,6 +3,7 @@
 - Feature: [#15084] [Plugin] Add "vehicle.crash" hook
 - Feature: [#15143] Added a shortcut key for Giant Screenshot.
 - Fix: [#14316] Closing the Track Designs Manager window causes broken state.
+- Fix: [#14667] “Extreme Hawaiian Island” has unpurchaseable land tiles (original bug).
 - Fix: [#15096] Crash when placing entrances in the scenario editor near the map corner.
 - Fix: [#15142] ToonTowner's mine roofs were moved into the pirate theme scenery group instead of the mine theme scenery group.
 - Fix: [#15148] Track Designs Manager delete confirmation window doesn't display properly.
